kubernetes/applications/media/manifests/files/files-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: files-deployment
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: files
  template:
    metadata:
      labels:
        app: files
    spec:
      # temporary: prefer to keep off overloaded oug node
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: NotIn
                    values:
                      - talos-oug-a0q
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: files
          image: ghcr.io/gtsteffaniak/filebrowser:1.5.5-beta
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
            - name: storage
              mountPath: /storage
            - name: configmap
              mountPath: /config.yaml
              subPath: config.yaml
            - name: cache
              mountPath: /cache
            - name: suwayomi-files
              mountPath: /suwayomi-files
            - name: suwayomi-backup-files
              mountPath: /suwayomi-backup-files
            - name: komga-data
              mountPath: /komga-data
          ports:
            - containerPort: 80
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: files-config-pvc
        - name: configmap
          configMap:
            name: files-configmap
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
        - name: storage
          persistentVolumeClaim:
            claimName: files-storage-pvc
        - name: suwayomi-files
          persistentVolumeClaim:
            claimName: suwayomi-server-files-pvc
        - name: suwayomi-backup-files
          persistentVolumeClaim:
            claimName: suwayomi-backup-server-files-pvc
        - name: komga-data
          persistentVolumeClaim:
            claimName: komga-data-pvc
        - name: cache
          emptyDir: {}
