kubernetes/applications/media/manifests/files/files-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: files-service
  namespace: media
spec:
  selector:
    app: files
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
