kubernetes/applications/media/manifests/files/files-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: files-httproute
  namespace: media
spec:
  parentRefs:
    - name: default-gateway
      namespace: kube-system
  hostnames:
    - files.nieradko.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: files-service
          port: 80
